hphp/test/zend/bad/jump08.php
<?php
goto L1;
while (0) {
	L1: echo "bug\n";
}
?>